--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://kiteprize.github.io/hys_portfoilo/",
   "name": "hys_portfolio",
   "version": "0.1.0",
   "private": true,
@@ -8,9 +7,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^4.0.0",
-    "react": "^18.2.0",
+    "react": "^16.14.0",
+    "react-bottom-drawer": "^0.1.1",
     "react-device-detect": "^2.2.2",
-    "react-dom": "^18.2.0",
+    "react-dom": "^16.14.0",
     "react-scripts": "5.0.1",
     "react-text-transition": "^3.0.2",
     "web-vitals": "^2.1.4"
