--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://kiteprize.github.io/hys_portfoilo/",
   "name": "hys_portfolio",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^4.0.0",
+    "patch-package": "^6.4.7",
     "react": "^16.14.0",
     "react-bottom-drawer": "^0.1.1",
     "react-device-detect": "^2.2.2",
