--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kiteprize.github.io/hys_portfoilo/",
+  "homepage": "https://kiteprize.github.io/hys_portfoilo",
   "name": "hys_portfolio",
   "version": "0.1.0",
   "private": true,
